# GLSLPlayground

./: CMakeLists.txt
Assets/Fonts/: arial.fnt  bangers.bif  bangers.fnt
Assets/Shader/: Grab.glsl  UiButtonShader.glsl  UiHitBoxShader.glsl  UiImageShader.glsl  UiTextShader.glsl  test.glsl
Assets/Shader/LineGrid/: UiLineShader.glsl  UiParticleShader.glsl
Assets/Textures/: BGBatch.bif  Icon.bif  Slider.bif  WindowIcon.bif  flower.bif  normal.bif  particle.bif
GLSLPlayground/: Main.cpp
GLSLPlayground/Window/: Window.cpp  Window.h  WindowCallback.cpp  WindowCallback.h  WindowContainer.cpp  WindowContainer.h  WindowManager.cpp
GraphicsSystem/: Main.cpp
GraphicsSystem/Renderer/: MasterRenderer.cpp  MasterRenderer.h
GraphicsSystem/Ui/UiComponents/: UiButton.cpp  UiButton.h  UiHeader.cpp  UiHeader.h  UiImage.cpp  UiImage.h  UiLineGrid.cpp  UiLineGrid.h  UiPanel.cpp  UiPanel.h  UiRectangle.cpp  UiRectangle.h  UiSlider.cpp  UiSlider.h  UiText.cpp  UiText.h  UiTextField.cpp  UiTextField.h
GraphicsSystem/Ui/UiComponents/LineGrid/Line/: LineManager.cpp  LineManager.h  UiLine.cpp  UiLine.h
GraphicsSystem/Ui/UiComponents/LineGrid/Particle/: Particle.cpp  Particle.h  ParticleManager.cpp  ParticleManager.h
GraphicsSystem/Ui/UiComponents/Text/: Font.cpp  Font.h  TextMesh.cpp  TextMesh.h
GraphicsSystem/Ui/UiComponents/Text/Structure/: Character.cpp  Character.h  Line.cpp  Line.h  Word.cpp  Word.h
GraphicsSystem/Ui/UiElements/: UiElement.cpp  UiElement.h  UiTransform.cpp  UiTransform.h
GraphicsSystem/Ui/UiUtil/: UiColor.cpp  UiColor.h
GraphicsSystem/Window/: WindowCallback.cpp  WindowCallback.h  WindowContainer.h  WindowManager.h  WindowSettings.h
